# vpp-kistler

./: .gitignore  LICENSE  README.md
P01/: CMakeLists.txt  bohrung.cpp  bohrung.h  class_diagram.vpp  fraesung.cpp  fraesung.h  komponente.cpp  komponente.h  komponentenList.cpp  komponentenList.h  main.cpp  p01TestMain.cpp  p01test.h
P02/: CMakeLists.txt  bohrung.cpp  bohrung.h  delist.cpp  delist.h  fraesung.cpp  fraesung.h  ikomponente.cpp  ikomponente.h  ikomponentenelement.h  iterator.cpp  iterator.h  komponente.cpp  komponente.h  main.cpp  werkstueck.cpp  werkstueck.h
P03/: CMakeLists.txt  bohrung.cpp  bohrung.h  delist.h  fraesung.cpp  fraesung.h  ikomponente.h  iterator.h  komponente.cpp  komponente.h  main.cpp  serializer.cpp  serializer.h  telement.h  v3test.h  v3test_main.cpp  werkstueck.cpp  werkstueck.h
P03/v3test_cmake/: CMakeLists.txt
einführungsbeispiel/: generate_samples  main.cpp
